--- a/css/style.css
+++ b/css/style.css
@@ -23,10 +23,10 @@
 .card{
 	width: 100%;
 	margin: 20px;
-    border:1px solid #0000;
+    border:1px solid #000;
 	border-radius: 6px;
 	overflow: hidden;
-	background:#fff;
+	background-color:#fff;
 	box-shadow: 0px 1px 10px rgba(0,0,0,0.2);
 	transition: all 400ms ease-out;
 	cursor: default;
@@ -35,9 +35,9 @@
 	box-shadow: 5px 5px 20px rgba(0,0,0,0.4);
 	transform: translateY(-3%);
 }
-.card img{
-	width: 90px;;
-	height: 90pxpx;
+.card > img{
+	width: 250px;;
+	height: 250px;
     object-fit:cover;
 }
 .card .contenido-card{
@@ -48,14 +48,14 @@
 .card .contenido-card h3{
 	margin-bottom: 15px;
 	color:#ffffff;
-    background-color: #0000;
+    background-color: #000;
 }
 .card .contenido-card p{
 	line-height: 1.8;
 	color: #ffffff;
 	font-size: 14px;
 	margin-bottom: 5px;
-    background-color: #0000;
+    background-color: #000;
 }
 .card .contenido-card a{
 	display: inline-block;
@@ -69,7 +69,7 @@
 	margin-bottom: 5px;
 }
 .card .contenido-card a:hover{
-	background: #0a0d0e;
+	background-color: #0a0d0e;
 	color: #fff;
 }
 
